--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,9 @@ body {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
+  line-height: 1.5;
   color: var(--primaryColor);
+  background-color: var(--background);
 }
 
 :root {
@@ -18,19 +18,19 @@ body {
   /* other */
   --border: #e7e9fc;
   --mainBackground: #2e2f42;
-  --mainBtnOrder: #4D5AE5;
+  --mainBtnOrder: #4d5ae5;
   --background: #ffffff;
   --whiteText: #ffffff;
   /* portfolio */
-  --portfolioButton: #F4F4FD;
-  --portfolioButtonActive: #404BBF;
-  --portfolioBtnText: #4D5AE5;
+  --portfolioButton: #f4f4fd;
+  --portfolioButtonActive: #404bbf;
+  --portfolioBtnText: #4d5ae5;
   /* footer */
   --logoFooter: #f4f4fd;
-  --footerBackground: #2E2F42;
+  --footerBackground: #2e2f42;
   --footerContent: #f4f4fd;
   /* active/hover */
-  --activeLink: #404BBF;
+  --activeLink: #404bbf;
 }
 
 .header {
@@ -53,9 +53,9 @@ body {
   font-family: "Raleway";
   font-weight: 800;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
-  color: var(--headingsColor);
+  color: var(--logoLast);
   text-transform: uppercase;
   margin-right: 76px;
   text-decoration: none;
@@ -65,9 +65,16 @@ body {
   color: var(--logoFirst);
 }
 
+.link {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
+}
+
 .nav__list {
   display: flex;
-  list-style: none;
 }
 
 .nav__list-item {
@@ -76,26 +83,30 @@ body {
 
 .nav__list-link {
   font-weight: 500;
+  letter-spacing: 0.02em;
   color: var(--headingsColor);
-  text-decoration: none;
 }
 
-.nav__list-link:hover {
+.nav__list-link:hover,
+.nav__list-link:focus {
   color: var(--activeLink);
   border-bottom: 4px solid var(--activeLink);
   border-radius: 2px;
+}
+
+.address {
+  font-style: normal;
 }
 
 .address__list {
   display: flex;
   align-items: center;
   gap: 40px;
-  list-style: none;
 }
 
 .address__list-link {
   text-decoration: none;
-  font-style: normal;
+  letter-spacing: 0.02em;
   color: var(--primaryColor);
 }
 
@@ -115,7 +126,8 @@ body {
   max-width: 496px;
   font-weight: 700;
   font-size: 56px;
-  line-height: 60px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
   color: var(--whiteText);
   margin-bottom: 48px;
 }
@@ -124,8 +136,8 @@ body {
   display: flex;
   margin: 0 auto;
   padding: 16px 32px;
-  background: var(--mainBtnOrder);
   font-weight: 500;
+  background: var(--mainBtnOrder);
   color: var(--whiteText);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
