--- a/css/styles.css
+++ b/css/styles.css
@@ -50,19 +50,18 @@ body {
 }
 
 .logo {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  color: var(--logoLast);
+  color: var(--logoFirst);
   text-transform: uppercase;
   margin-right: 76px;
-  text-decoration: none;
 }
 
 .logo-primary {
-  color: var(--logoFirst);
+  color: var(--logoLast);
 }
 
 .link {
@@ -136,15 +135,21 @@ body {
   display: flex;
   margin: 0 auto;
   padding: 16px 32px;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
+  font-style: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   background: var(--mainBtnOrder);
   color: var(--whiteText);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+  cursor: pointer;
 }
 
-.main-btn:hover {
+.main-btn:hover,
+.main-btn:focus {
   background: var(--activeLink);
 }
 
@@ -156,7 +161,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  list-style: none;
 }
 
 .advantages__item {
@@ -168,6 +172,12 @@ body {
   color: var(--headingsColor);
   font-weight: 500;
   font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.advantages__item-text {
+  letter-spacing: 0.02em;
 }
 
 .about {
@@ -180,14 +190,13 @@ body {
   color: var(--headingsColor);
   font-weight: 700;
   font-size: 36px;
-  line-height: 40px;
+  line-height: 1.11;
   text-transform: capitalize;
 }
 
 .about__products {
   display: flex;
   justify-content: space-between;
-  list-style: none;
 }
 
 .about__product {
@@ -205,7 +214,8 @@ body {
   color: var(--headingsColor);
   font-weight: 700;
   font-size: 36px;
-  line-height: 40px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
 }
 
@@ -235,7 +245,13 @@ body {
   color: var(--headingsColor);
   font-weight: 500;
   font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
+
+/* .team__item-title {
+
+} */
 
 .footer {
   padding: 100px 0;
@@ -243,14 +259,13 @@ body {
 }
 
 .logo-footer {
+  font-family: "Raleway", sans-serif;
   color: var(--logoFooter);
-  font-family: "Raleway";
   font-weight: 800;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;
 }
 
 .footer-text {
@@ -268,19 +283,19 @@ body {
   align-items: center;
   justify-content: center;
   gap: 24px;
-  list-style: none;
 }
 
 .portfolio__sort-btn {
+  font-family: "Roboto", sans-serif;
   margin-bottom: 72px;
   padding: 12px 24px;
   color: var(--portfolioBtnText);
   background: var(--portfolioButton);
   border: 1px solid var(--border);
   border-radius: 4px;
-  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
 }
@@ -298,7 +313,6 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 48px 24px;
-  list-style: none;
 }
 
 .portfolio__item {
@@ -310,8 +324,10 @@ body {
 }
 
 .portfolio__item-title {
+  margin-bottom: 8px;
   color: var(--headingsColor);
   font-weight: 500;
   font-size: 20px;
-  margin-bottom: 8px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
